forth/test/fail/test_catch_invalid_exec.af
\ Must fail to compile: `nop` doesn't .throw.
fun: test_catch_invalid_exec
  .nop .catch
end
